# mama-fitness

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml  wrangler.jsonc
data/: cardio.yaml  exercises.yaml  info.yaml  knowledge.yaml  site.yaml  tools.yaml  videos.yaml
docs/: README.md
docs/decisions/: TEMPLATE.md
docs/design/: TEMPLATE.md
docs/prd/: TEMPLATE.md
scripts/: add-photos.sh  check_overflow.py  deploy.sh
skills/mama-voice/: SKILL.md
skills/video-to-gif-cover/: SKILL.md
src/mama_site/: anatomy.py  build.py  cli.py  models.py
static/: composer.js  famphotos.js  slider.js  style.css
templates/: about.html  base.html  cardio_page.html  exercise.html  home.html  info_page.html  learn.html  legal.html  thanks.html  tool_page.html  tools_overview.html  videos.html  why.html
tests/: conftest.py  test_build.py  test_composer_algo.mjs  test_models.py  test_seed_data.py
