[project]
name = "mama-site"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mama_site"]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "ipykernel",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
